fixed login on mobile3

--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,6 @@ footer {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  position: absolute;
   bottom: 0;
   text-align: center;
   background: var(--primary-col);
